package com.michal.Exceptions;

public class FailedConnectingToServerException extends Exception {
    public FailedConnectingToServerException(String message) {
        super(message);
    }
}
