
package com.michal.Exceptions;

public class NotConnectedException extends Exception {
    public NotConnectedException(String message) {
        super(message);
    }
}